# deval

./: .env.example  .gitignore  README.md  devlog.md  pyproject.toml  scorer.py
bot/: clob.py  config.py  copy_bot.py  data.py  exit.py  gamma.py  logging_.py  pnl.py  positions.py  ranker.py  risk.py  sizing.py  whale_feed.py
scripts/: rank_wallets.py  setup_allowances.py  shadow_replay.py  start.sh
tests/: test_exit.py  test_pnl.py  test_ranker.py  test_risk.py  test_sizing.py
